# gotostack.github.io

./: .gitignore  README.rst  index.html  requirements.txt  setup.cfg  tox.ini
doc/html/: index.html  objects.inv  rss.xml  search.html  searchindex.js
doc/html/pages/AboutMe/: me.html  resume.html
doc/html/pages/Cloud/: openstack.html
doc/html/pages/CloudComputing/: layer-3-rate-limit.html  openstack.html
doc/html/pages/aboutme/: me.html  resume.html
doc/html/sources/: index.txt
doc/html/sources/pages/AboutMe/: me.txt  resume.txt
doc/html/sources/pages/CloudComputing/: layer-3-rate-limit.txt
doc/html/static/: tweaks.css
doc/source/: conf.py  index.rst
gotostack_github_io/: sphinxext.py
gotostack_github_io/theme/gotostack/: layout.html
gotostack_github_io/theme/gotostack/static/: nature.css  tweaks.css
pages/CloudComputing/: openstack.rst
