[metadata]
name = gotostack_github_io
summary = gotostack.github.io
description-file =
    README.rst
author = LIU Yulong
author-email = i@liuyulong.me
home-page = www.cloudcraft.cn
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
	Topic :: Documentation

[build_sphinx]
all_files = 1
build-dir = doc/
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
